v2.8.3   - Bug fixed FPS change to prevent FPS of 0 or less.

v2.8.2   - Removed incorrect error when buffers were full.
	 - Added routine to print out decode status in natural
	   language instead of a code.
	 - Allowed saving of opengl snapshot to movie files.  This
	   works identically to saving normal movies, but requires user
	   to Save explicitally with the GL Snapshots option.
	 - Bug fixed opengl snapshot saving to save the view without
	   any additional green headroom.
	 - Bug fixed opengl snapshots saving being one frame behind.
	 - Bug fixed a crash when saving movies whose first 
	   audio frame was 0.

v2.8.1   - Improved playback of movies sometimes when pts was skipping
	   a frame.
	 - Minor speeding up in movie playback.
	 - Bug fixed playback of image sequences with attached sound,
	   which would freeze on a frame.
	 - Added the option to offset the attached audio file so as to
	   sync the audio without cutting the original clip.
	 - Documented RMB menu options.
	 - Turned off PostgreSQL database driver on Linux by default 
	   so as to avoid errors on startup for new users.
	 - Fixed crash on wrong locale.  Now it exits gracefully.

v2.8.0   - Bug fixed playback in reverse to not use so much memory.
	 - Retrofit previous algorithm for movie playback as new 
	   algorithm was not frame accurate.
	 - Bug fixed playback of one sample movie (PoTC.VOB), which
	   would start with frame frozen.
	 - Bug fixed movies that had B frames in it and would show 
	   incorrectly.

v2.7.9   - Bug fixed start frame on BG image, which would offset by 1 
	   frame.
	 - Added display of FG and BG images to title bar.  Previously,
	   this would only be used when edl was on.
	 - Improved performance of seek in video playback and scrubbing.
	 - Improved performance of reverse playback.
	 - Reverse playback is now frame accurate, instead of being
	   shifted by one frame.

v2.7.8   - Fixed hangs and crashes on playback of single images in EDL.